erDiagram

    Currency {
        string code PK
        string name
        string symbol
        boolean isActive
        timestamp createdAt
    }

    TaxGroup {
        string id PK
        string name
        int rateBps
        boolean isActive
        timestamp createdAt
    }

    TipPreset {
        string id PK
        string chainId FK "nullable"
        string restaurantId FK "nullable"
        int rateBps
        boolean isActive
        timestamp createdAt
        timestamp updatedAt
    }

    Currency ||--o{ Chain : "usada en"
    Currency ||--o{ Restaurant : "usada en"
    Currency ||--o{ Settlement : "usada en"

    TaxGroup ||--o{ Chain : "default en"
    TaxGroup ||--o{ Restaurant : "default en"
    TaxGroup ||--o{ RestaurantCategory : "aplicado en"
    TaxGroup ||--o{ RestaurantMenuItem : "aplicado en"
